QA_Ipreo/src/objects/Opportunity_Pipeline_History__c.object
<CustomObject>
    <fields>
        <fullName>ACV_New_Business__c</fullName>
        <formula>IF(Record_Type__c=&quot;New Business&quot;, ACV__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACV - New Business</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACV_Renewals__c</fullName>
        <formula>IF(Record_Type__c=&quot;Renewal&quot;, ACV__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACV - Renewals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACV__c</fullName>
        <label>ACV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Pipeline History Records</relationshipLabel>
        <relationshipName>Opportunity_Pipeline_History_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Annual_Transaction_Fees__c</fullName>
        <label>Est. Annual Transaction Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Historical_Date__c</fullName>
        <formula>DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Historical Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Net_New_Business__c</fullName>
        <label>Net New Business</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Currency__c</fullName>
        <label>Opportunity Currency</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <label>Opportunity Owner</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Pipeline_History_Unique_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Opportunity Pipeline History Unique Key</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Pipeline History Records</relationshipLabel>
        <relationshipName>Opportunity_Pipeline_History_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pass_Through__c</fullName>
        <label>Pass Through</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior_Year_ACV__c</fullName>
        <label>Prior Year ACV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior_Year_Pass_Through__c</fullName>
        <label>Prior Year Pass Through</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCV__c</fullName>
        <label>TCV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Pipeline__c</fullName>
        <formula>(Close_Date__c - Historical_Date__c) &gt;= 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Pipeline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <label>Vertical</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X180_Day_Pipeline__c</fullName>
        <description>Indicates that this record&apos;s Close Date is within 180 days of the Historical Date</description>
        <formula>(Close_Date__c - Historical_Date__c) &lt;= 180 &amp;&amp; (Close_Date__c - Historical_Date__c) &gt;= 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>180 Day Pipeline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X30_Day_Pipeline__c</fullName>
        <description>Indicates that this record&apos;s Close Date is within 30 days of the Historical Date</description>
        <formula>(Close_Date__c - Historical_Date__c) &lt;= 30 &amp;&amp; (Close_Date__c - Historical_Date__c) &gt;= 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>30 Day Pipeline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X90_Day_Pipeline__c</fullName>
        <description>Indicates that this record&apos;s Close Date is within 90 days of the Historical Date</description>
        <formula>(Close_Date__c - Historical_Date__c) &lt;= 90 &amp;&amp; (Close_Date__c - Historical_Date__c) &gt;= 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>90 Day Pipeline</label>
        <type>Checkbox</type>
    </fields>
    <label>Opportunity Pipeline History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>ACV__c</columns>
        <columns>Close_Date__c</columns>
        <columns>Historical_Date__c</columns>
        <columns>Net_New_Business__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Pass_Through__c</columns>
        <columns>Stage__c</columns>
        <columns>TCV__c</columns>
        <columns>Vertical__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OPH-{000000}</displayFormat>
        <label>Opportunity Pipeline History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Pipeline Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>